# Arctic

./: .gitignore  .gitmodules  README.md  bridge.js  package-lock.json  package.json
contracts/: .env.example  .solhint.json  foundry.toml
contracts/broadcast/DeployCosmosBridge.sol/11155111/: run-1757266130100.json
contracts/broadcast/DeployCosmosBridge.sol/262144/: run-1757265531942.json  run-1757265703053.json  run-1757265723655.json
contracts/script/: DeployCosmosBridge.sol
contracts/src/: CosmosBridge.sol
contracts/src/errors/: Index.sol
contracts/src/interfaces/: ICosmosBridge.sol  IERC20.sol
contracts/src/types/: Index.sol
relayer/: Cargo.toml
relayer/src/: main.rs
