[package]
name = "relayer"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.30"
tokio = { version="1.38", features=["full"]}
tracing-subscriber = { version="0.3.19", features=["env-filter"]}
libp2p = { version="0.56.0", features=["tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic", "kad"]}